@@ -114,7 +114,7 @@ foreach ($rows as $row) {
 	if (empty($row['menutitle'])) {$row['menutitle'] = $row['pagetitle'];}
 	if (!empty($useWeblinkUrl) && $row['class_key'] == 'modWebLink') {
 		$row['link'] = is_numeric(trim($row['content'], '[]~ '))
-			? $modx->makeUrl(intval(trim($row['content'], '[]~ ')), $row['context_key'], '', $scheme)
+			? $modx->makeUrl(intval(trim($row['content'], '[]~ ')), '', '', $scheme)
 			: $row['content'];
 	}
 	else {
