@@ -123,7 +123,7 @@ $output = array();
 foreach ($rows as $row) {
 	if (!empty($useWeblinkUrl) && $row['class_key'] == 'modWebLink') {
 		$row['url'] = is_numeric(trim($row['content'], '[]~ '))
-			? $modx->makeUrl(intval(trim($row['content'], '[]~ ')), $row['context_key'], '', $scheme)
+			? $modx->makeUrl(intval(trim($row['content'], '[]~ ')), '', '', $scheme)
 			: $row['content'];
 	}
 	else {
